# project-manager-realtime

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  fix_alembic.py  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  comment.py  notification.py  project.py  task.py  user.py
backend/app/routers/: auth.py  comments.py  labels.py  members.py  notifications.py  projects.py  statuses.py  tasks.py
backend/app/schemas/: __init__.py  auth.py  comment.py  notification.py  project.py  task.py
backend/app/services/: notification_service.py  project_service.py  task_service.py
backend/app/sockets/: __init__.py  handlers.py  server.py
backend/app/utils/: security.py
frontend/: .env.production  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  ProtectedRoute.tsx  Sidebar.tsx
frontend/src/components/notifications/: NotificationBell.tsx  NotificationPanel.tsx
frontend/src/components/project/: MemberInviteDialog.tsx  MemberManager.tsx  ProjectCard.tsx  ProjectForm.tsx
frontend/src/components/task/: TaskCard.tsx  TaskComments.tsx  (+2 more)
frontend/src/hooks/: useSocket.ts
frontend/src/lib/: api.ts  socket.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  ProjectDetailPage.tsx  RegisterPage.tsx  SettingsPage.tsx
frontend/src/stores/: auth-store.ts  notification-store.ts  project-store.ts  task-store.ts
frontend/src/types/: index.ts
(+6 files in other folders)
